--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,13 @@
 cmake_minimum_required(VERSION 3.0)
 
 project (ci-tools-example C)
-
     add_executable(example ${CMAKE_SOURCE_DIR}/source/example.c)
 
-    if(CI_TESTS)
+    include(CTest)
+    if(BUILD_TESTING)
         add_test(example example)
-    endif()
-
-    if(MSVC)
-        set(CC_FLAGS "/W4 /WX ${CI_CC_FLAGS}")
-    else()
-        set(CC_FLAGS "-Wall -Wextra -Werror -Wshadow ${CI_CC_FLAGS}")
     endif()
     
     if(DEFINED ENV{CI})
-        set_target_properties(example PROPERTIES COMPILE_FLAGS ${CC_FLAGS})
+        set_target_properties(example PROPERTIES COMPILE_FLAGS ${CI_CC_FLAGS} LINK_FLAGS ${CI_LD_FLAGS})
     endif()
