--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,10 @@ project (ci-tools-example C)
     endif()
     
     if(DEFINED ENV{CI})
-        set_target_properties(example PROPERTIES COMPILE_FLAGS ${CI_CC_FLAGS} LINK_FLAGS ${CI_LD_FLAGS})
+        if(DEFINED CI_CC_FLAGS)
+            set_target_properties(example PROPERTIES COMPILE_FLAGS "${CI_CC_FLAGS}")
+        endif() 
+        if(DEFINED CI_LD_FLAGS)
+            set_target_properties(example PROPERTIES LINK_FLAGS "${CI_LD_FLAGS}")
+        endif()      
     endif()
