--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,7 @@ project (ci-tools-example C)
     
     set_target_properties(example PROPERTIES POSITION_INDEPENDENT_CODE "True")
     if(DEFINED ENV{CI})
-        if(DEFINED CI_CC_FLAGS)
-            set_target_properties(example PROPERTIES COMPILE_FLAGS "${CI_CC_FLAGS}")
-        endif() 
-        if(DEFINED CI_LD_FLAGS)
-            set_target_properties(example PROPERTIES LINK_FLAGS "${CI_LD_FLAGS}")
-        endif()      
+        if(DEFINED CI_FLAGS)
+            set_target_properties(example PROPERTIES COMPILE_FLAGS "${CI_FLAGS}" LINK_FLAGS "${CI_FLAGS}")
+        endif()  
     endif()
