--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,7 +2,8 @@ build:
   dependencies:
     override:
       - sudo apt-get update -y
-      - sudo apt-get install -y build-essential python valgrind
+      - sudo apt-get install -y git build-essential python valgrind
+      - git submodule update --init --recursive
       - python ci-tools/install_cmake.py
 
   tests:
