--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,19 +2,30 @@ version: 0.1.{build}
 
 environment:
   matrix:
+    - CTEST_CMAKE_GENERATOR: Visual Studio 15 2017
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - CTEST_CMAKE_GENERATOR: Visual Studio 15 2017 Win64
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - CTEST_CMAKE_GENERATOR: Visual Studio 15 2017 ARM
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     - CTEST_CMAKE_GENERATOR: Visual Studio 14 2015
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     - CTEST_CMAKE_GENERATOR: Visual Studio 14 2015 Win64
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     - CTEST_CMAKE_GENERATOR: Visual Studio 14 2015 ARM
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     - CTEST_CMAKE_GENERATOR: Visual Studio 12 2013
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
     - CTEST_CMAKE_GENERATOR: Visual Studio 12 2013 Win64
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
     - CTEST_CMAKE_GENERATOR: Visual Studio 12 2013 ARM
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
 
 before_build:
-  - git submodule update --init --recursive --quiet
-  - appveyor DownloadFile https://github.com/h-s-c/ci-tools/releases/download/0.1/OpenCppCoverage.7z
-  - 7z x OpenCppCoverage.7z > nul
-  - set PATH=%cd%\OpenCppCoverage;%PATH%
-  - python ci-tools/install_cmake.py
+  - cinst wget opencppcoverage
+  - refreshenv
 
 build_script:
+  - git submodule update --init --recursive --quiet
+  - python ci-tools/install_cmake.py
   - python ci-tools/run_ctest.py
